--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
                 <a href="=www.alura,com.br" class="container_botao"> Assim por 12x de R$120,00</a>
                 <a href="=www.alura,com.br" class="container_botao botao_secundario"> Assinar somente o alura+</a>
                 <p class="container_aviso">*O preço pode variar caso a assinatura seja feita em outros planos</p>
-            </a>      
+            </a>  
+                
         </div>
         </section>
 
@@ -65,7 +66,7 @@
     </section>
 
     <footer class="rodape">
-        <img src="logo.png" alt="alura" class="rodape_logo">
+        <img src="Logo.png" alt="alura" class="rodape_logo">
         <ul class="rodape_lista">
             <li class="lista_link">
                 <a href="#">Idioma</a>
